--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Kopi Kenangan Senja</title>
+  <title>Kopi Kamutuh</title>
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,7 +24,7 @@
 
   <!-- Navbar start -->
   <nav class="navbar">
-    <a href="#" class="navbar-logo">kenangan<span>senja</span>.</a>
+    <a href="#" class="navbar-logo">Kopi<span>Kamutuh</span>.</a>
 
     <div class="navbar-nav">
       <a href="#home">Home</a>
@@ -84,7 +84,7 @@
     <div class="mask-container">
       <main class="content">
         <h1>Mari Nikmati Secangkir <span>Kopi</span></h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, enim.</p>
+        <p>Dengan Sensi Cita Rasa kopi Khas Nusantara</p>
       </main>
     </div>
   </section>
@@ -100,10 +100,11 @@
       </div>
       <div class="content">
         <h3>Kenapa memilih kopi kami?</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur ducimus voluptatum dolor. Et, voluptatum
-          accusantium!</p>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic deserunt iure amet facilis eos a quo cum
-          voluptates molestias nihil.</p>
+        <p> Karena Kopi Kamutuh Menyediakan Bibit Kopi Pilihan Yang enak dengan Cita Rasa Khas Nusantara</p>
+        <p>Selain Menyajikan Kopi Yang Istimewa dengan harga yang Ideal, Kami menjamin Cita Rasa kopi
+          yang Tidak mengecewakan
+
+        </p>
       </div>
     </div>
   </section>
@@ -112,7 +113,7 @@
   <!-- Menu Section start -->
   <section id="menu" class="menu">
     <h2><span>Menu</span> Kami</h2>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita, repellendus numquam quam tempora voluptatum.
+    <p>Berikut Adalah Kopi Terbaik Kami
     </p>
 
     <div class="row">
@@ -223,7 +224,7 @@
   <!-- Contact Section start -->
   <section id="contact" class="contact">
     <h2><span>Kontak</span> Kami</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, provident.
+    <p>Kami hanya melayani chat fast respon pada saat jam Operasional
     </p>
 
     <div class="row">
