--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <div class="mask-container">
       <main class="content">
         <h1>Mari Nikmati Secangkir <span>Kopi</span></h1>
-        <p>Dengan Sensi Cita Rasa kopi Khas Nusantara</p>
+        <p>Dengan Sensasi Cita Rasa kopi Khas Nusantara</p>
       </main>
     </div>
   </section>
@@ -154,7 +154,7 @@
   <!-- Products Section start -->
   <section class="products" id="products">
     <h2><span>Produk Unggulan</span> Kami</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo unde eum, ab fuga possimus iste.</p>
+    <p>Produk Unggulan kami adalah produk yang sudah Mendapatkan Verified oleh Barista ternama Indonesia
 
     <div class="row">
       <div class="product-card">
@@ -281,8 +281,9 @@
         <img src="img/products/1.jpg" alt="Product 1">
         <div class="product-content">
           <h3>Product 1</h3>
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident, tenetur cupiditate facilis obcaecati
-            ullam maiores minima quos perspiciatis similique itaque, esse rerum eius repellendus voluptatibus!</p>
+          <p>Ini Semuanya Tentang Kopi Yang dituangkan dalam Seni yang dikembang kan oleh Ahli profeseional dengan cita
+            rasa lopi Yang Khas dan masih banyak lagi
+          </p>
           <div class="product-stars">
             <i data-feather="star" class="star-full"></i>
             <i data-feather="star" class="star-full"></i>
